Display Android version on runtime

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,4 +62,10 @@ android:orientation="vertical">
             app:iconGravity="end"
             android:text="@string/next_button"/>
     </LinearLayout>
+    <TextView
+        android:id="@+id/android_version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        />
 </LinearLayout>
